--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,59 +83,52 @@
         android:layout_marginEnd="15dp"
         android:onClick="onClick" />
 
-    <TextView
+    <com.ll.uicomponent.ShapeTextView
+        android:id="@+id/chameleonView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="显示不同色块的InfoBar："
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-
-        />
-
-    <com.ll.uicomponent.ChameleonView
-        android:id="@+id/chameleon"
-        android:layout_width="match_parent"
-        android:layout_height="12dp"
+        android:layout_height="44dp"
+        android:textColor="#ff4b73"
+        android:text="ChameleonView"
+        android:gravity="center"
+        app:shapeStrokeWidth="1dp"
+        app:shapeStrokeColor="#ff4b73"
+        app:shapeRadius="60dp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        app:clShapeRadius="9dp" />
+        android:onClick="onClick" />
 
-    <View
+    <com.ll.uicomponent.ShapeTextView
+        android:id="@+id/suctionBottomLayout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="吸底并带顶部阴影的Layout："
-        android:layout_marginTop="20dp"
+        android:layout_height="44dp"
+        android:textColor="#ff4b73"
+        android:text="SuctionBottomLayout"
+        android:gravity="center"
+        app:shapeStrokeWidth="1dp"
+        app:shapeStrokeColor="#ff4b73"
+        app:shapeRadius="60dp"
+        android:layout_marginTop="10dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        />
+        android:onClick="onClick" />
 
-    <com.ll.uicomponent.SuctionBottomLayout
+
+    <com.ll.uicomponent.ShapeTextView
+        android:id="@+id/touchEventTest"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="44dp"
+        android:textColor="#ff4b73"
+        android:text="TouchEventTest"
+        android:gravity="center"
+        app:shapeStrokeWidth="1dp"
+        app:shapeStrokeColor="#ff4b73"
+        app:shapeRadius="60dp"
         android:layout_marginTop="10dp"
-        android:orientation="vertical"
-        >
-        <com.ll.uicomponent.ShapeTextView
-            android:id="@+id/add"
-            android:layout_width="match_parent"
-            android:layout_height="37dp"
-            android:layout_marginStart="18dp"
-            android:layout_marginEnd="18dp"
-            android:gravity="center"
-            android:layout_marginTop="12dp"
-            android:text="升级云存储空间"
-            android:textColor="#ffffff"
-            android:textSize="14sp"
-            app:shapeEndColor="#FF3682"
-            app:shapeRadius="20dp"
-            app:shapeStartColor="#FF6064" />
-    </com.ll.uicomponent.SuctionBottomLayout>
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:onClick="onClick" />
+
+
 
 </LinearLayout>
