--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#FF6064</color>
+    <color name="colorPrimaryDark">#FF6064</color>
+    <color name="colorAccent">#FF6064</color>
+    <color name="colorTheme">#FF6064</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorStart">#00C4F6</color>
+    <color name="colorEnd">#0083F6</color>
 </resources>
