更新EmptyView示例截图

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,11 @@
     <com.ll.uicomponent.ShapeTextView
         android:id="@+id/emptyView"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="40dp"
         android:text="EmptyView"
         android:gravity="center"
         android:textColor="#ff4b73"
-        app:shapeStrokeWidth="1dp"
+        app:shapeStrokeWidth="0.5dp"
         app:shapeStrokeColor="#ff4b73"
         app:shapeRadius="60dp"
         android:onClick="onClick"
@@ -26,14 +26,14 @@
     <com.ll.uicomponent.ShapeTextView
         android:id="@+id/formView"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="40dp"
         android:text="FormView"
         android:gravity="center"
         android:textColor="#ff4b73"
-        app:shapeStrokeWidth="1dp"
+        app:shapeStrokeWidth="0.5dp"
         app:shapeStrokeColor="#ff4b73"
         app:shapeRadius="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:onClick="onClick"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp" />
@@ -41,14 +41,14 @@
     <com.ll.uicomponent.ShapeTextView
         android:id="@+id/shapeTextView"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="40dp"
         android:textColor="#ff4b73"
         android:text="ShapeTextView"
         android:gravity="center"
-        app:shapeStrokeWidth="1dp"
+        app:shapeStrokeWidth="0.5dp"
         app:shapeStrokeColor="#ff4b73"
         app:shapeRadius="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:onClick="onClick"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp" />
@@ -56,14 +56,14 @@
     <com.ll.uicomponent.ShapeTextView
         android:id="@+id/rotateTextView"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="40dp"
         android:textColor="#ff4b73"
         android:text="RotateTextView"
         android:gravity="center"
-        app:shapeStrokeWidth="1dp"
+        app:shapeStrokeWidth="0.5dp"
         app:shapeStrokeColor="#ff4b73"
         app:shapeRadius="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:onClick="onClick"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp" />
@@ -71,14 +71,14 @@
     <com.ll.uicomponent.ShapeTextView
         android:id="@+id/clearEditTextView"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="40dp"
         android:textColor="#ff4b73"
         android:text="ClearEditTextView"
         android:gravity="center"
-        app:shapeStrokeWidth="1dp"
+        app:shapeStrokeWidth="0.5dp"
         app:shapeStrokeColor="#ff4b73"
         app:shapeRadius="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:onClick="onClick" />
@@ -86,14 +86,14 @@
     <com.ll.uicomponent.ShapeTextView
         android:id="@+id/chameleonView"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="40dp"
         android:textColor="#ff4b73"
         android:text="ChameleonView"
         android:gravity="center"
-        app:shapeStrokeWidth="1dp"
+        app:shapeStrokeWidth="0.5dp"
         app:shapeStrokeColor="#ff4b73"
         app:shapeRadius="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:onClick="onClick" />
@@ -101,14 +101,14 @@
     <com.ll.uicomponent.ShapeTextView
         android:id="@+id/suctionBottomLayout"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="40dp"
         android:textColor="#ff4b73"
         android:text="SuctionBottomLayout"
         android:gravity="center"
-        app:shapeStrokeWidth="1dp"
+        app:shapeStrokeWidth="0.5dp"
         app:shapeStrokeColor="#ff4b73"
         app:shapeRadius="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:onClick="onClick" />
@@ -117,14 +117,15 @@
     <com.ll.uicomponent.ShapeTextView
         android:id="@+id/touchEventTest"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="40dp"
         android:textColor="#ff4b73"
         android:text="TouchEventTest"
         android:gravity="center"
-        app:shapeStrokeWidth="1dp"
+        app:shapeStrokeWidth="0.5dp"
         app:shapeStrokeColor="#ff4b73"
         app:shapeRadius="60dp"
-        android:layout_marginTop="10dp"
+        android:visibility="gone"
+        android:layout_marginTop="5dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:onClick="onClick" />
