--- a/app/src/main/res/layout/activity_empty_view_example.xml
+++ b/app/src/main/res/layout/activity_empty_view_example.xml
@@ -25,4 +25,30 @@
         app:empty_title="文字在图片下面显示"
         app:empty_title_topToBottom_icon="true"
         app:empty_title_topToBottom_margin="10dp" />
+
+    <com.ll.uicomponent.EmptyView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:empty_icon="@mipmap/base_ic_empty_money"
+        app:empty_icon_height="90dp"
+        app:empty_title="暂无数据"
+        app:empty_title_topToBottom_margin="10dp" >
+
+        <com.ll.uicomponent.ShapeTextView
+            android:layout_width="100dp"
+            android:layout_height="34dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/icon"
+            android:text="点击刷新"
+            android:textColor="@color/colorTheme"
+            android:textSize="12dp"
+            android:gravity="center"
+            app:shapeRadius="22dp"
+            app:shapeStrokeWidth="0.5dp"
+            app:shapeStrokeColor="@color/colorTheme"
+            android:layout_marginTop="10dp"
+            />
+    </com.ll.uicomponent.EmptyView>
 </LinearLayout>
