--- a/app/src/main/res/layout/activity_empty_view_example.xml
+++ b/app/src/main/res/layout/activity_empty_view_example.xml
@@ -13,6 +13,7 @@
         app:empty_icon="@mipmap/base_ic_empty_money"
         app:empty_icon_height="90dp"
         app:empty_title="文字在图片内_居底部显示"
+        app:empty_title_size="14"
         app:empty_title_bottomToBottom_margin="1dp"
         app:empty_title_topToBottom_icon="false" />
 
@@ -23,6 +24,7 @@
         app:empty_icon="@mipmap/base_ic_empty_money"
         app:empty_icon_height="90dp"
         app:empty_title="文字在图片下面显示"
+        app:empty_title_size="12"
         app:empty_title_topToBottom_icon="true"
         app:empty_title_topToBottom_margin="10dp" />
 
@@ -33,6 +35,8 @@
         app:empty_icon="@mipmap/base_ic_empty_money"
         app:empty_icon_height="90dp"
         app:empty_title="暂无数据"
+        app:empty_title_size="10"
+        app:empty_title_color="@color/colorAccent"
         app:empty_title_topToBottom_margin="10dp" >
 
         <com.ll.uicomponent.ShapeTextView
