--- a/app/src/main/res/layout/activity_suction_bottom_layout_example.xml
+++ b/app/src/main/res/layout/activity_suction_bottom_layout_example.xml
@@ -22,9 +22,8 @@
 
     <com.ll.uicomponent.SuctionBottomLayout
         android:layout_width="match_parent"
-        android:layout_height="130dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:orientation="vertical"
         >
         <com.ll.uicomponent.ShapeTextView
             android:id="@+id/add"
@@ -55,6 +54,8 @@
             app:shapeStrokeColor="#FF6064"
             app:shapeStrokeWidth="1dp"
             app:shapeRadius="20dp"
+            android:layout_marginBottom="12dp"
+            app:layout_constraintTop_toBottomOf="@id/add"
             />
     </com.ll.uicomponent.SuctionBottomLayout>
 </LinearLayout>
