--- a/app/src/main/res/layout/activity_form_view_example.xml
+++ b/app/src/main/res/layout/activity_form_view_example.xml
@@ -74,5 +74,19 @@
             app:form_name="推流平台"
             app:form_name_marginTop="14dp"
             app:form_name_text_style="NORMAL" />
+
+        <com.ll.uicomponent.FormView
+            android:id="@+id/choose1"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:onClick="onClick"
+            app:form_edit_hint="请选择地区"
+            app:form_edit_input_enable="false"
+            app:form_unit="市"
+            app:form_unit_marginEnd="15dp"
+            app:form_edit_input_type="TYPE_CLASS_PHONE"
+            app:form_end_icon="@mipmap/base_ic_arrow_right_gray"
+            app:form_name="        地区" />
     </LinearLayout>
 </layout>
