修复formview单位与图表重叠的问题

--- a/app/src/main/res/layout/activity_clear_edit_view_example.xml
+++ b/app/src/main/res/layout/activity_clear_edit_view_example.xml
@@ -17,6 +17,8 @@
         android:drawablePadding="10dp"
         android:hint="ClearEditTextView"
         android:paddingStart="10dp"
+        android:maxLines="1"
+        android:inputType="text"
         android:paddingEnd="10dp"
         app:searchBgShapeRadius="20dp"
         app:searchBgShapeSolidColor="#F6F6F6" />
