--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -142,6 +142,19 @@
         />
 
     <com.ll.uicomponent.DivergenceShadowButton
+        android:id="@+id/div_task"
+        android:layout_width="150dp"
+        android:onClick="onClick"
+        android:layout_height="wrap_content"
+        app:divButtonHeight="30dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="15dp"
+        app:divText="Activity Task Test"
+        app:divTextSize="12"
+        app:divShadowImgSrc="@mipmap/ic_shadow_btn1"
+        />
+
+    <com.ll.uicomponent.DivergenceShadowButton
         android:layout_width="85dp"
         android:layout_height="wrap_content"
         app:divButtonHeight="30dp"
@@ -151,6 +164,8 @@
         app:divTextSize="12"
         app:divShadowImgSrc="@mipmap/ic_shadow_btn1"
         />
+
+
 
 
 </LinearLayout>
